cm4all-workshop (7.1) unstable; urgency=low

  * workshop: disable progress pipe if "translate" is enabled
  * workshop: read remaining output after job process exits

 --   

cm4all-workshop (7.0) unstable; urgency=low

  * workshop: fix use-after-free bug in "${0}" expansion
  * workshop: report spawner errors
  * workshop: implement plan option "translate"
  * no delay for first PostgreSQL auto-reconnect

 -- Max Kellermann <mk@cm4all.com>  Tue, 28 Oct 2025 12:07:14 +0100

cm4all-workshop (6.13) unstable; urgency=low

  * translation: add packet ALLOW_PTRACE
  * cron: allow multipliers for "@hourly"
  * sql: add index on "cronresults.finished" for pruning old rows

 -- Max Kellermann <mk@cm4all.com>  Mon, 29 Sep 2025 12:40:05 +0200

cm4all-workshop (6.12) unstable; urgency=low

  * spawn: disable the PID namespace for the spawner process
  * spawn: reassociate with existing user/IPC namespace (experimental)
  * spawn: hold a namespace lease

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Sep 2025 09:00:31 +0200

cm4all-workshop (6.11) unstable; urgency=low

  * workshop: use state directories to enable/disable the queue
  * systemd: do not restart on configuration errors
  * debian: start daemon during initial installation, stop on uninstall

 -- Max Kellermann <mk@cm4all.com>  Tue, 19 Aug 2025 13:29:35 +0200

cm4all-workshop (6.10) unstable; urgency=low

  * workshop: create session cgroups
  * workshop: do not override the translation server's cgroup settings for
    "spawn"
  * cron: check the translation status for HTTP jobs
  * pond: truncate long lines before sending to Pond

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Aug 2025 08:38:40 +0200

cm4all-workshop (6.9) unstable; urgency=low

  * spawn: fix assertion failure with large payloads
  * spawn: fix hanging main process after spawner failure
  * translation: add packet REAL_UID_GID
  * switch to C++23
  * require Meson 1.2

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Apr 2025 12:01:37 +0200
