@@ -29,6 +29,8 @@ CREATE TABLE jobs (
         args varchar(4096)[] NULL,
         -- environment variables in the form NAME=VALUE
         env varchar(4096)[] NULL,
+        -- optional data fed into stdin
+        stdin bytea NULL,
 
         -- which cm4all-workshop node is executing this job?
         node_name varchar(256) NULL,
